style.css
body {
    background-color: #0a192f;
    min-height: 100vh;
    margin: 0;
    display: grid;
    grid-template-rows: auto 1fr auto;
    font-family: "Varela Round", sans-serif;
}

html {
    scroll-behavior: smooth;
}

button {
    background-color: #0a192f;
    color: #64ffda;
    padding: 10px;
    border: 1px solid;
    border-radius: 5px;
    border-color: #64ffda;
}

button:hover {
    background-color: #122d54;
    cursor: pointer;
}

.contact-me-button {
    margin-top: 5%;
    display: flex;
    align-items: center;
}

.mail-icon {
    width: 25px;
    padding-right: 10px;
}

a {
    text-decoration: none;
}



/* -------------- Navigation Bar -------------- */
nav {
    padding: 5px;
    background-color: #0a192f;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-menu-bar {
    display: none;
}

.gray-github, .gray-linkedin {

    width: 36px;
    padding: 5px;
    transition: all 0.3s ease-in-out;
    margin: auto;
}

.alex {
    width: 100px;
}

.gray-github:hover {
    content: url('images/GreenGitHub.png');
}

.gray-linkedin:hover {
    content: url('images/GreenLinkedin.png');
}



/* ---------------- Main Conctent -------------- */
header {
    display: flex;
    color: #8892b0;
    text-align: center;
    padding: 50px;
    justify-content: center;
}

header div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.name {
    color: #64ffda;
    font-weight: 800;
}

.cursor {
    display: inline-block;
    background-color: #64ffda;
    width: 0.20rem;
    height: 2.2rem;
    animation: blink 1s infinite;
    vertical-align: middle;
    border-radius: 50px;
}


@keyframes blink {
    0%, 100% {
        background-color: transparent;
    }

    50% {
        background-color: #64ffda;
    }
}

h1 {
    color: #ccd6f6;
}

h2 {
    color: #a8b2d1;
    margin-top: 0px;
}

h3 {
    color: #a8b2d1;
    font-style:italic;
}

header div p {
    line-height: 28px;
    margin-top: 0px;
}

main {
    
    color: #8892b0;
    font-weight: 400;
    font-style: normal;
    text-align: center;
}

.tech-stack {
color: #a8b2d1;
}

.not-supported {
    color: #a8b2d1;
}

.about-me, .experience, .projects {
    text-align: center;
    padding: 40px;
}

.maybeanadventure {
    width: 275px;
    border-radius: 10px;
}

hr {
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 0.5px;
    width: 75%;
    border-color: #64ffda;
    border-radius: 100%;
}

ul {
    display: inline-block;
    text-align: left;
}

li::marker {
    color: #64ffda;
}

.main-p {
    color: #8892b0;
    line-height: 30px;
}

#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 15px;
    z-index: 99;
    cursor: pointer;
    padding: 10px;
    width: 50px;
    height: 40px;
    font-size: 18px;
    background-color: #0a192f;
}

#myBtn:hover {
    background-color: #122d54;
}

button:active,
button:focus {
    background-color: #0a192f; /* Reset to original background */
    outline: none;
}

@media (hover: none) {
    button:hover {
        background-color: #0a192f; /* No hover effect on touch devices */
    }

    #myBtn:hover {
        background-color: #0a192f; /* Also disable hover on scroll button */
    }
}



/* -------------------- Footer ------------------ */
footer {

    color: #8892b0;
    text-align: center;
    padding-bottom: 10%;
    font-size: 13px;
}



/* -------------------- Media Query ----------------------- */
@media only screen and (min-width: 1200px) {



    /* -------------- Navigation Bar -------------- */
    .nav-menu-bar {
        display: flex;
    }

    .nav-menu-bar a {
        color: #d8d9d8;
        margin: 50px;
        padding: 5px;
        padding-left: 10px;
        padding-right: 10px;
        border-radius: 10px;
        text-decoration: none;
    }

    a {
        text-decoration: none;
    }

    .nav-menu-bar a:hover {
        background-color: #64ffda;
        color: black;
    }



    /* ---------------- Main Conctent -------------- */
    header div {
        display: block;
        justify-content: center;
        align-items: center;
        margin: 300px;
        margin-top: 150px;
    }

    .contact-me-button {
        margin-top: 50px;
        text-decoration: none;
    }

    button {
        text-decoration: none;
    }

    header div {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    header div p {
        line-height: 40px;
        font-size: 20px;
        max-width: 65%;
        margin: auto;
    }

    header h1 {
        color: #ccd6f6;
        font-weight: 400;
        font-style: normal;
        font-size: 75px;
    }


    header h2 {
        color: #a8b2d1;
        font-weight: 400;
        font-style: normal;
        font-size: 30px;
    }

    .cursor {
        display: inline-block;
        background-color: #64ffda;
        width: 0.35rem;
        height: 5rem;
        animation: blink 1s infinite;
        vertical-align: middle;
        border-radius: 50px;
    }

    @keyframes blink {
        0%, 100% {
            background-color: transparent;
        }

        50% {
            background-color: #64ffda;
        }
    }

    .about-me {
        color: #a8b2d1;
        font-weight: 400;
        font-style: normal;
        font-size: 30px;
        margin: 150px;
    }

    .about-me p {
        font-size: 20px;
        line-height: 40px;
        display: inline-block;
        max-width: 50%;
        justify-content: center;
        align-items: center;
    }

    .experience {
        color: #a8b2d1;
        font-weight: 400;
        font-style: normal;
        font-size: 30px;
        margin: 150px;
    }

    .experience-wrapper {
        font-size: 20px;
        line-height: 40px;
        display: inline-block;
        max-width: 50%;
        justify-content: center;
        align-items: center;
    }

    .projects {
        color: #a8b2d1;
        font-weight: 400;
        font-style: normal;
        font-size: 30px;
        margin: 150px;
    }

    .projects-wrapper {
        font-size: 20px;
        line-height: 40px;
        display: inline-block;
        justify-content: center;
        align-items: center;
    }

    .maybeanadventure {
        width: 50%;
    }

    button {
        padding: 25px;
        padding-left: 30px;
        padding-right: 30px;
    }

    a button {
        font-size: 20px;
        font-weight: bold;
    }

    /* arrow up button */
    #myBtn {
        display: none;
        position: fixed;
        bottom: 20px;
        right: 15px;
        z-index: 99;
        cursor: pointer;
        padding: 10px;
        width: 50px;
        height: 40px;
        font-size: 18px;
    }

    #myBtn:hover {
        background-color: #122d54;
    }



    /* -------------------- Footer ------------------ */
    footer {
        padding-bottom: 2.5%;
    }
}

@media only screen and (max-width: 600px) {

    .alex {
        width: 100px;
        margin-right: 150px;
    }
}


/* For Galaxy Z Flip */
@media screen and (max-width: 356px) {
    .nav-social-bar {
        display: flex;
    }
}

